--- a/vars.yml
+++ b/vars.yml
@@ -1,7 +1,7 @@
 ---
 # some data to make the urls unique
 # change to another value, e.g. your trial account ID
-ID: a8885066trial
+ID: 00000000trial
 
 # Choose cfapps.eu10.hana.ondemand.com for the EU10 landscape, cfapps.us10.hana.ondemand.com for US10
 LANDSCAPE_APPS_DOMAIN: cfapps.eu10.hana.ondemand.com
